ChangeLog
=========

1.2.0 (unreleased)
------------------

*Bugfix:*

    * *[#153]* Don't send empty updates to the LDAP Server.

*New:*

    * Normalize value of nullable empty attributes: return ``0`` / ``0.0`` if the field is not nullable,
      ``None`` otherwise.


1.1.0 (2018-07-14)
------------------

*New:*

    * Switch back to ``python-ldap`` instead of ``pyldap``. Users updating a virtualenv must
      uninstall ``pyldap`` **before** installing ``python-ldap``:

      .. code-block:: sh

          pip uninstall pyldap
          pip install python-ldap

    * Add ``DateTimeField`` and ``TimestampField``, with proper lookups.

1.0.0 (2018-03-06)
------------------

*New:*

    * Add support for Django 2.0

*Deprecation:*

    * Drop support for Django <1.11 (we only support the latest Django version,
      and the Django LTS preceding that version).

0.9.0 (2017-06-14)
------------------

*Bugfix:*

    * Restore support for raw LDAP options

*New:*

    * Add support for Django 1.11

*Deprecation:*

    * Drop support for Django 1.9 (we only support 2 LTS and 2 latest releases)


.. _v0.8.0:

0.8.0 (2017-01-24)
------------------

*Bufix:*

    * Improve Django 1.10 support: fix errors with ``makemigrations``

*New:*

    * Add query timeout support, through the ``QUERY_TIMEOUT`` setting
    * Handle paginated results, tunable by the ``PAGE_SIZE`` setting

.. _v0.7.0:

0.7.0 (2016-10-24)
------------------

*New:*

    * Add support for Django ≥ 1.10
    * Allow ``__in`` lookups for int/float fields

*Bugfix:*

    * Remove all remaining warnings

*Deprecation:*

    * Drop support for Django < 1.8

.. _v0.6.0:

0.6.0 (2016-06-06)
------------------

*Bugfix:*

    * Implement connection recycling according to Django defaults

*Deprecation:*

    * Remove support code for Django < 1.7

.. _v0.5.1:

0.5.1 (2016-06-04)
------------------

*New:*

    * Add direct ``dn`` lookup (e.g ``MyModel.objects.get(dn=x)``)


.. _v0.5.0:

0.5.0 (2016-06-01)