@@ -7,6 +7,7 @@ ChangeLog
 *Bugfix:*
 
     * *[#153]* Don't send empty updates to the LDAP Server.
+    * *[#159]* Fix saving composite PK objects.
 
 *New:*
 
